<resources>
    <string name="app_name">PhotosOnMap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="drawer_menu_photos">Photos</string>
    <string name="drawer_menu_map">Map</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_your_login">Enter your login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="repeat_your_password">Repeat your password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="create_log_in">Create log in</string>
    <string name="create_password">Create password</string>
    <string name="positive_button">Ok</string>
    <string name="negative_button">No</string>
    <string name="delete_photo">Delete photo</string>
    <string name="message_delete_photo">Delete photo?</string>
    <string name="take_photo">Take Photo</string>
    <string name="sign_out">Sign out</string>
    <string name="button_yes">Yes</string>
    <string name="approve_sign_out">Do you really want to sign out?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_photo">Choose Photo</string>
</resources>